[gd_scene load_steps=46 format=3 uid="uid://dybnb2lmsq7s0"]

[ext_resource type="Script" uid="uid://be5rffb7rwigg" path="res://entity/actor/npc/army/army.gd" id="1_13omc"]
[ext_resource type="Texture2D" uid="uid://dcefsfe6uvtoj" path="res://entity/actor/npc/army/ninja_green/art/SpriteSheet.png" id="2_tn28i"]
[ext_resource type="PackedScene" uid="uid://do052sqt3wjdp" path="res://common/component/detectbox/detectbox.tscn" id="3_lqaih"]
[ext_resource type="PackedScene" uid="uid://d3g8jgprf7bfw" path="res://common/component/enemy_scanner/enemy_scanner.tscn" id="3_v4ucm"]
[ext_resource type="PackedScene" uid="uid://dagjfgo7sjdn0" path="res://entity/projectile/arrow/arrow.tscn" id="5_bahv0"]
[ext_resource type="PackedScene" uid="uid://l45622b15oap" path="res://common/component/attack/projectile_attack/projectile_attack.tscn" id="6_i87wb"]
[ext_resource type="PackedScene" uid="uid://bhgm1iqut1i6s" path="res://common/component/pathfinding/pathfinding.tscn" id="7_iga26"]
[ext_resource type="Script" uid="uid://bu436ru5hhd66" path="res://common/component/animation/base_animation.gd" id="8_4aipm"]
[ext_resource type="Script" uid="uid://lsk26m6ixhqu" path="res://common/state_machinie/state_machine.gd" id="8_13omc"]
[ext_resource type="Script" uid="uid://lnjp761bf75g" path="res://common/component/movement/base_movement.gd" id="8_i87wb"]
[ext_resource type="Script" uid="uid://dplrsortb8ufa" path="res://entity/actor/npc/army/state/army_idle.gd" id="8_lqaih"]
[ext_resource type="Script" uid="uid://d0008vj2c0w5u" path="res://entity/actor/npc/army/state/army_follow.gd" id="9_6k810"]
[ext_resource type="Script" uid="uid://d257mq3pbe3mk" path="res://entity/actor/npc/army/state/army_chase.gd" id="11_6k810"]
[ext_resource type="Script" uid="uid://4ryn1wepqme5" path="res://entity/actor/npc/army/state/army_attack.gd" id="12_4aipm"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ocq7q"]
radius = 1.0
height = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_tn28i"]
radius = 100.0

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mvkfs"]
animation = &"AttackDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_oas31"]
animation = &"AttackUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bgeu8"]
animation = &"AttackLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rhdt7"]
animation = &"AttackRight"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_87esk"]
blend_point_0/node = SubResource("AnimationNodeAnimation_mvkfs")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_oas31")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_bgeu8")
blend_point_2/pos = Vector2(-0.9, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_rhdt7")
blend_point_3/pos = Vector2(0.9, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4aipm"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_i87wb"]
animation = &"MoveDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_iga26"]
animation = &"MoveUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ocq7q"]
animation = &"MoveLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hww7n"]
animation = &"MoveRight"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_4aipm"]
blend_point_0/node = SubResource("AnimationNodeAnimation_i87wb")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_iga26")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_ocq7q")
blend_point_2/pos = Vector2(-0.9, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_hww7n")
blend_point_3/pos = Vector2(0.9, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_i87wb"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_iga26"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ocq7q"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hww7n"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mvkfs"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_iga26"]
states/Attack/node = SubResource("AnimationNodeBlendSpace2D_87esk")
states/Attack/position = Vector2(348, -33)
states/Idle/node = SubResource("AnimationNodeAnimation_4aipm")
states/Idle/position = Vector2(348, 100)
states/Move/node = SubResource("AnimationNodeBlendSpace2D_4aipm")
states/Move/position = Vector2(576, 100)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_i87wb"), "Idle", "Move", SubResource("AnimationNodeStateMachineTransition_iga26"), "Move", "Idle", SubResource("AnimationNodeStateMachineTransition_ocq7q"), "Idle", "Attack", SubResource("AnimationNodeStateMachineTransition_hww7n"), "Attack", "Idle", SubResource("AnimationNodeStateMachineTransition_mvkfs")]
graph_offset = Vector2(-111, -129)

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_ocq7q"]
graph_offset = Vector2(-70, -3)
nodes/StateMachine/node = SubResource("AnimationNodeStateMachine_iga26")
nodes/StateMachine/position = Vector2(-80, 120)
node_connections = [&"output", 0, &"StateMachine"]

[sub_resource type="Animation" id="Animation_oas31"]
resource_name = "AttackDown"
length = 0.666671
loop_mode = 1
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Skin:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(0, 5), Vector2i(0, 4), Vector2i(0, 2)]
}

[sub_resource type="Animation" id="Animation_rhdt7"]
resource_name = "AttackLeft"
length = 0.666671
loop_mode = 1
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Skin:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 3), Vector2i(2, 5), Vector2i(2, 4), Vector2i(2, 2)]
}

[sub_resource type="Animation" id="Animation_87esk"]
resource_name = "AttackRight"
length = 0.666671
loop_mode = 1
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Skin:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(3, 3), Vector2i(3, 5), Vector2i(3, 4), Vector2i(3, 2)]
}

[sub_resource type="Animation" id="Animation_bgeu8"]
resource_name = "AttackUp"
length = 0.666671
loop_mode = 1
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Skin:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 3), Vector2i(1, 5), Vector2i(1, 4), Vector2i(1, 2)]
}

[sub_resource type="Animation" id="Animation_4aipm"]
resource_name = "Idle"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Skin:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.9), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Skin:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -7), Vector2(0, -6), Vector2(0, -7)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Skin:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_ocq7q"]
resource_name = "MoveDown"
length = 0.666683
loop_mode = 1
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Skin:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(0, 2), Vector2i(0, 3), Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_hww7n"]
resource_name = "MoveLeft"
length = 0.666683
loop_mode = 1
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Skin:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 1), Vector2i(2, 2), Vector2i(2, 3), Vector2i(2, 0)]
}

[sub_resource type="Animation" id="Animation_mvkfs"]
resource_name = "MoveRight"
length = 0.666683
loop_mode = 1
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Skin:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(3, 1), Vector2i(3, 2), Vector2i(3, 3), Vector2i(3, 0)]
}

[sub_resource type="Animation" id="Animation_iga26"]
resource_name = "MoveUp"
length = 0.666683
loop_mode = 1
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Skin:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 1), Vector2i(1, 2), Vector2i(1, 3), Vector2i(1, 0)]
}

[sub_resource type="Animation" id="Animation_i87wb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Skin:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Skin:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -6)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Skin:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i87wb"]
_data = {
&"AttackDown": SubResource("Animation_oas31"),
&"AttackLeft": SubResource("Animation_rhdt7"),
&"AttackRight": SubResource("Animation_87esk"),
&"AttackUp": SubResource("Animation_bgeu8"),
&"Idle": SubResource("Animation_4aipm"),
&"MoveDown": SubResource("Animation_ocq7q"),
&"MoveLeft": SubResource("Animation_hww7n"),
&"MoveRight": SubResource("Animation_mvkfs"),
&"MoveUp": SubResource("Animation_iga26"),
&"RESET": SubResource("Animation_i87wb")
}

[node name="NinjaGeen" type="CharacterBody2D"]
collision_layer = 256
collision_mask = 4
motion_mode = 1
script = ExtResource("1_13omc")
attack_range = 75.0

[node name="Skin" type="Sprite2D" parent="."]
position = Vector2(0, -6)
texture = ExtResource("2_tn28i")
hframes = 4
vframes = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ocq7q")
debug_color = Color(0.961248, 0, 0.511433, 0.42)

[node name="EnemyScanner" parent="." instance=ExtResource("3_v4ucm")]
position = Vector2(0, -5)
detectbox_radius = 100.0
attack_range = 75.0

[node name="Detectbox" parent="EnemyScanner" instance=ExtResource("3_lqaih")]
collision_layer = 0
collision_mask = 2
radius = 100.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyScanner/Detectbox"]
shape = SubResource("CircleShape2D_tn28i")
debug_color = Color(0, 0.129412, 0.701961, 0.0784314)

[node name="ProjectileAttack" parent="." instance=ExtResource("6_i87wb")]
position = Vector2(0, -5)
projectile_scene = ExtResource("5_bahv0")
max_targets = 2

[node name="Pathfinding" parent="." node_paths=PackedStringArray("movement") instance=ExtResource("7_iga26")]
movement = NodePath("../Movement")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Pathfinding"]
path_desired_distance = 40.0
target_desired_distance = 20.0
avoidance_enabled = true
radius = 1.0
debug_use_custom = true
debug_path_custom_color = Color(1, 0, 1, 1)

[node name="Movement" type="Node" parent="."]
script = ExtResource("8_i87wb")

[node name="Animation" type="Node" parent="." node_paths=PackedStringArray("animation_tree")]
script = ExtResource("8_4aipm")
animation_tree = NodePath("AnimationTree")

[node name="AnimationTree" type="AnimationTree" parent="Animation"]
tree_root = SubResource("AnimationNodeBlendTree_ocq7q")
anim_player = NodePath("../AnimationPlayer")
parameters/StateMachine/Attack/blend_position = Vector2(0.00197494, 0.905405)
parameters/StateMachine/Move/blend_position = Vector2(-0.162607, -0.756701)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Animation"]
libraries = {
&"": SubResource("AnimationLibrary_i87wb")
}

[node name="ArmyStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("8_13omc")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="ArmyStateMachine"]
script = ExtResource("8_lqaih")
follow_threshold = 16.0
animation_state = "Idle"

[node name="Follow" type="Node" parent="ArmyStateMachine"]
script = ExtResource("9_6k810")
move_speed = 50.0
animation_state = "Move"

[node name="Chase" type="Node" parent="ArmyStateMachine"]
script = ExtResource("11_6k810")
animation_state = "Move"

[node name="Attack" type="Node" parent="ArmyStateMachine"]
script = ExtResource("12_4aipm")
animation_state = "Attack"
